# AlciaTTY

./: CMakeLists.txt  main.cpp  readme.md
Data/: Enemies.json  Location.json
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/Entities/: CMakeLists.txt
src/Core/Entities/Character/: Character.cpp  Character.h
src/Core/Entities/Enemy/: Enemy.cpp  Enemy.h
src/Core/Entities/Player/: Player.cpp  Player.h
src/Core/Systems/: CMakeLists.txt
src/Core/Systems/Actions/: AttackAction.cpp  AttackAction.h  CombatAction.cpp  CombatAction.h  SpellAction.cpp  SpellAction.h
src/Core/Systems/Combat/: Combat.cpp  Combat.h
src/Ui/: CMakeLists.txt
src/Ui/Components/: MultiOptionInput.cpp  MultiOptionInput.h
src/Ui/Components/Utils/: Utils.h
